[package]
authors = ["Al Liu <scygliu1@gmail.com>"]
name = "wg"
description = "Golang like WaitGroup implementation for sync/async Rust."
homepage = "https://github.com/al8n/wg"
repository = "https://github.com/al8n/wg.git"
documentation = "https://docs.rs/wg/"
readme = "README.md"
version = "0.8.1"
license = "MIT OR Apache-2.0"
keywords = ["waitgroup", "async", "sync", "notify", "wake"]
categories = ["asynchronous", "concurrency", "data-structures"]
edition = "2021"

[features]
default = ["std", "parking_lot", "triomphe"]
std = ["triomphe?/default", "event-listener?/default", "futures-core?/default", "tokio?/rt"]
triomphe = ["dep:triomphe"]
parking_lot = ["dep:parking_lot"]

future = ["event-listener", "pin-project-lite", "agnostic-lite"]
tokio = ["dep:tokio", "futures-core", "pin-project-lite", "agnostic-lite/tokio"]
smol = ["agnostic-lite/smol", "future"]
async-std = ["agnostic-lite/async-std", "future"]

[dependencies]
parking_lot = { version = "0.12", optional = true }
triomphe = { version = "0.1", optional = true, default-features = false }
event-listener = { version = "5", optional = true, default-features = false }
pin-project-lite = { version = "0.2", optional = true }

tokio = { version = "1", optional = true, default-features = false, features = ["sync"] }
futures-core = { version = "0.3", default-features = false, optional = true }
agnostic-lite = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "tokio"
path = "tests/tokio.rs"
required-features = ["tokio"]

[[test]]
name = "future"
path = "tests/future.rs"
required-features = ["future"]

[[test]]
name = "sync"
path = "tests/sync.rs"

