[package]
authors = ["Al Liu <scygliu1@gmail.com>"]
name = "wg"
description = "Golang like WaitGroup implementation for sync/async Rust."
homepage = "https://github.com/al8n/wg"
repository = "https://github.com/al8n/wg.git"
documentation = "https://docs.rs/wg/"
readme = "README.md"
version = "1.0.1"
license = "MIT OR Apache-2.0"
keywords = ["waitgroup", "async", "sync", "notify", "wake"]
categories = ["asynchronous", "concurrency", "data-structures", "no-std"]
edition = "2021"
rust-version = "1.76.0"

[[example]]
name = "sync"
path = "examples/sync.rs"
required-features = ["std"]

[[example]]
name = "future"
path = "examples/future.rs"
required-features = ["future", "std"]

[features]
default = ["std", "parking_lot", "triomphe"]
alloc = []
std = ["triomphe?/default", "event-listener?/default"]
triomphe = ["dep:triomphe"]
parking_lot = ["dep:parking_lot"]
future = ["event-listener", "pin-project-lite"]

[dependencies]
parking_lot = { version = "0.12", optional = true }
triomphe = { version = "0.1", optional = true, default-features = false }
event-listener = { version = "5", optional = true, default-features = false, features = ["portable-atomic"] }

pin-project-lite = { version = "0.2", optional = true }

[dev-dependencies]
agnostic-lite = { version = "0.6", features = ["smol", "tokio", "time"] }
tokio = { version = "1", features = ["full"] }
smol = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "future"
path = "tests/future.rs"
required-features = ["future"]

[[test]]
name = "sync"
path = "tests/sync.rs"
